Fix bug 1271331: Do not overflow progress chart (#395)

--- a/pontoon/base/static/css/style.css
+++ b/pontoon/base/static/css/style.css
@@ -574,14 +574,16 @@ label {
 }
 
 .select .menu ul li .chart {
-  background: #FD5F60;
+  display: table;
   height: 5px;
   margin-top: 6px;
+  table-layout: fixed;
   width: 140px;
 }
 
 .select .menu ul li .chart span {
-  float: left;
+  display: table-cell;
+  float: none;
   height: 100%;
 }
 
@@ -595,6 +597,10 @@ label {
 
 .select .menu ul li .chart span.fuzzy {
   background: #FED271;
+}
+
+.select .menu ul li .chart span.missing {
+  background: #FD5F60;
 }
 
 .select .menu ul li .latest {
